--- a/src/assets/styles/login.css
+++ b/src/assets/styles/login.css
@@ -1,20 +1,68 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
-
-:root {
-  --azul-primario: #91d7f2;
-  --azul-secudario: #022e40;
-  --laranja-primario: #f2955e;
-  --laranja-secudario: #d93b3b;
-  --bege-primario: #f2f0eb;
-  --bege-secundario: #fcfcfc;
+.area-imagem {
+  width: 100vw;
+  min-height: 35vh;
+  max-height: 300px;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.area-imagem img {
+  width: 100%;
+  height: 100%;
+}
 
-  font-family: 'Roboto', sans-serif;
-  text-decoration: none;
-  list-style: none;
+.area-login {
+  width: 100vw;
+  max-height: 50vh;
+  padding: 0 16px;
+}
+
+.login {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login > input {
+  background-color: var(--bege-secundario);
+  color: var(--azul-secudario);
+  font-weight: 600;
+
+  width: 100%;
+  height: 44px;
+  
+  border: 2px solid var(--azul-secudario);
+  border-radius: 16px;
+  margin: 8px 0;
+  text-indent: 8pt;
+
+  outline: none;
+}
+
+#entrar {
+  background-color: var(--azul-secudario);
+  color: var(--bege-primario);
+  font-size: 1.4rem;
+
+  width: 156px;
+  height: 36px;
+  margin: 8px 0;
+  border-radius: 16px;
+  border: none;
+}
+
+#registrar {
+  background-color: var(--laranja-primario);
+  color: var(--bege-primario);
+  font-size: .95rem;
+
+  width: 92px;
+  height: 24px;
+  margin: 8px 0;
+  border-radius: 16px;
+  border: none;
+}
+
+#esqueceu-senha {
+  color: var(--azul-secudario);
+  font-size: .9rem;
 }
