fix(login): ajust some class n id

--- a/src/assets/styles/login.css
+++ b/src/assets/styles/login.css
@@ -50,7 +50,7 @@
   border: none;
 }
 
-#registrar {
+#cadastrar {
   background-color: var(--laranja-primario);
   color: var(--bege-primario);
   font-size: .95rem;
