--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -45,6 +45,7 @@
 
 .menu .fa-bars {
   color: var(--bege-secundario);
+  cursor: pointer;
 }
 
 .menu > .left {
@@ -99,6 +100,8 @@
 
   border-radius: 16px;
   border: none;
+
+  cursor: pointer;
 }
 
 .entrar:focus {
@@ -110,9 +113,18 @@
   width: 100vw;
   height: 100vh;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   padding-top: 44px;
 }
 
 .hide {
   display: none;
+}
+
+button, a {
+  cursor: pointer;
 }
