--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -39,6 +39,7 @@
 
 .menu > .right {
   width: 156px;
+  height: 36px;
   display: flex;
   justify-content: flex-end;
 }
@@ -61,15 +62,15 @@
   
   width: 220px;
   padding: 16px;
-  border-bottom-right-radius: 16px;;
+  border-radius: 16px;;
   
   position: absolute;
   top: 31px;
-  left: -16px;
+  left: 8px;
 
   transition: .3s ease-in-out;
 }
-/* 
+
 .submenu::before {
   content: url('../images/seta-menu.svg');
   width: 20px;
@@ -78,7 +79,7 @@
   position: absolute;
   top: -10px;
   left: 0;
-} */
+}
 
 .submenu > ul {
   color: var(--bege-secundario);
@@ -106,6 +107,39 @@
 
 .entrar:focus {
   outline: none;
+}
+
+.right a {
+  width: 100%;
+  height: 100%;
+  display: inherit;
+  justify-content: inherit;
+}
+
+.info, .img-perfil {
+  width: auto;
+  height: 100%;
+  display: flex;
+}
+
+.info {
+  color: var(--bege-secundario);
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  margin-right: 12px;
+}
+
+.info strong {
+  font-size: .9rem;
+}
+.info span {
+  color: var(--bege-primario);
+  font-size: .7rem;
+}
+
+.img-perfil .foto {
+  width: 36px;
 }
 
 .content {
