--- a/src/assets/styles/cadastro.css
+++ b/src/assets/styles/cadastro.css
@@ -24,13 +24,13 @@
 
 .cadastro > input {
   background-color: var(--bege-secundario);
-  color: var(--azul-secudario);
+  color: var(--azul-secundario);
   font-weight: 600;
 
   width: 100%;
   height: 44px;
   
-  border: 2px solid var(--azul-secudario);
+  border: 2px solid var(--azul-secundario);
   border-radius: 16px;
   margin: 8px 0;
   text-indent: 8pt;
@@ -55,6 +55,6 @@
 }
 
 #sou-membro {
-  color: var(--azul-secudario);
+  color: var(--azul-secundario);
   font-size: .9rem;
 }
