--- a/src/assets/styles/login.css
+++ b/src/assets/styles/login.css
@@ -24,13 +24,13 @@
 
 .login > input {
   background-color: var(--bege-secundario);
-  color: var(--azul-secudario);
+  color: var(--azul-secundario);
   font-weight: 600;
 
   width: 100%;
   height: 44px;
   
-  border: 2px solid var(--azul-secudario);
+  border: 2px solid var(--azul-secundario);
   border-radius: 16px;
   margin: 8px 0;
   text-indent: 8pt;
@@ -39,7 +39,7 @@
 }
 
 #entrar {
-  background-color: var(--azul-secudario);
+  background-color: var(--azul-secundario);
   color: var(--bege-primario);
   font-size: 1.4rem;
 
@@ -63,6 +63,6 @@
 }
 
 #esqueceu-senha {
-  color: var(--azul-secudario);
+  color: var(--azul-secundario);
   font-size: .9rem;
 }
